# milvus-hybrid

./: .gitignore  API_USAGE.md  CHANGELOG.md  README.md  api_server.py  hello.py  pyproject.toml
docs/: QUICKSTART.md  USAGE.md
examples/: benchmark.py  comprehensive_test.py  search_example.py  test_api_service.py  test_llm_summary.py
src/: __init__.py  config.py  hybrid_retriever.py
src/build_db/: __init__.py  build_db_from_txt.py
