[project]
name = "milvus-hybrid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.0",
    "hydra-core>=1.3.2",
    "jsonlines>=4.0.0",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.7",
    "langchain-milvus>=0.3.0",
    "langchain-openai>=1.0.3",
    "langchain-text-splitters>=1.0.0",
    "modelscope>=1.32.0",
    "pymilvus[milvus-lite,model]>=2.6.3",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sentence-transformers>=5.1.2",
    "tenacity>=9.0.0",
    "tiktoken>=0.12.0",
    "transformers>=4.57.1",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default=true